# trustd

./: Cargo.toml  README.md  build.rs
examples/: non_tdx_remediation_demo.rs
hack/: manual-remediation-container-demo.sh  run-non-tdx-e2e.sh  run-remediation-cases.sh
hack/staged-remediation/: 01_setup.sh  02_start_demo.sh  03_heartbeat_once.sh  03_trigger_heartbeat_loss.sh  04_status.sh  05_wait_for_miss.sh  99_cleanup.sh  _common.sh
proto/v1/: trustd.proto
src/: config.rs  error.rs  event_bus.rs  lib.rs  lifecycle.rs  liveness.rs  main.rs  remediation.rs  runtime.rs  securityfs.rs  service.rs  spec_store.rs  state.rs  tdquote.rs  unix_rpc.rs  vsock_quote.rs  watcher.rs
tests/: grpc_end_to_end.rs  non_tdx_monitor_remediation_e2e.rs  public_api.rs
